--- a/templates/_story.html
+++ b/templates/_story.html
@@ -15,11 +15,11 @@
       <form method="POST">
         {% csrf_token %}
         {% if story.published %}
-          <button name="hide-story" value="{{ story.id }}" class="story-status lock" title="Make this story private">lock</button>
+          <button type="submit" name="hide-story" value="{{ story.id }}" class="story-status lock" title="Make this story private">lock</button>
         {% elif not story.private %}
-          <button name="publish-story" value="{{ story.id }}" class="story-status unlock" title="Make this story public">unlock</button>
+          <button type="submit" name="publish-story" value="{{ story.id }}" class="story-status unlock" title="Make this story public">unlock</button>
         {% endif %}
-        <button name="delete-story" value="{{ story.id }}" class="delete-story">Delete</button>
+        <button type="submit" name="delete-story" value="{{ story.id }}" class="delete-story">Delete</button>
       </form>
     </div>
   {% endif %}
