--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
   {% include "forms/errors.html" with errors=form.non_field_errors %}
 
-  {% with label="Leave a story for "|add:teacher.get_name %}
+  {% with label="Leave a story for "|add:teacher.full_name %}
   {% with help_text="You can include video by pasting in a <a href='http://youtube.com/'>youtube</a> link." %}
   {% include "forms/formfield.html" with field=form.body label=label help_text=help_text %}
   {% endwith %}
