--- a/templates/_story.html
+++ b/templates/_story.html
@@ -15,10 +15,12 @@
         {% csrf_token %}
         {% if story.published %}
           <button type="submit" name="hide-story" value="{{ story.id }}" class="story-status lock" title="Make this story private">lock</button>
-        {% elif not story.private %}
+        {% elif story.private %}
+          <p class="story-private-notice" title="This story was marked private by the student.">private</p>
+        {% else %}
           <button type="submit" name="publish-story" value="{{ story.id }}" class="story-status unlock" title="Make this story public">unlock</button>
         {% endif %}
-        <button type="submit" name="delete-story" value="{{ story.id }}" class="delete-story">Delete</button>
+        <button type="submit" name="delete-story" value="{{ story.id }}" class="delete-story" title="Delete this story.">Delete</button>
       </form>
     </div>
   {% endif %}
