--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -174,12 +174,12 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370488090') format("woff"), url('../fonts/knet.ttf?1370488090') format("truetype");
+  src: url('../fonts/knet.woff?1370583578') format("woff"), url('../fonts/knet.ttf?1370583578') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status.unlock:before, .story-status.lock:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .story.private:before, .story-private-notice:before, [data-icon]:before {
+.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before, .user-nav .fb-login:before, .announce:before, .message:before, .story.hidden:before, .story.private:before, .story-private-notice:before, [data-icon]:before {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -188,7 +188,7 @@ a:focus, a:hover, a:active {
   speak: none;
 }
 
-.user-nav [name="logout"], #messages .close, .toggle-addstory-main, .toggle-addstory-body, .story-status.unlock, .story-status.lock, .delete-story {
+.user-nav [name="logout"], #messages .close, .toggle-addstory-main, .toggle-addstory-body, .story-status, .delete-story {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -196,7 +196,7 @@ a:focus, a:hover, a:active {
   min-width: 1em;
   text-indent: -9999px;
 }
-.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status.unlock:before, .story-status.lock:before, .delete-story:before {
+.user-nav [name="logout"]:before, #messages .close:before, .toggle-addstory-main:before, .toggle-addstory-body:before, .story-status:before, .delete-story:before {
   position: absolute;
   top: 0;
   left: 0;
@@ -207,14 +207,6 @@ a:focus, a:hover, a:active {
 
 [data-icon]:before {
   content: attr(data-icon);
-}
-
-.story.private:before, .story-status.unlock:before, .story-status.lock:focus:before, .story-status.lock:hover:before, .story-status.lock:active:before, .story-private-notice:before {
-  content: "\e001";
-}
-
-.story-status.unlock:focus:before, .story-status.unlock:hover:before, .story-status.unlock:active:before, .story-status.lock:before {
-  content: "\e002";
 }
 
 .delete-story:before {
@@ -251,6 +243,18 @@ a:focus, a:hover, a:active {
 
 .user-nav [name="logout"]:before {
   content: "\e00c";
+}
+
+.story.private:before, .story-private-notice:before {
+  content: "\e001";
+}
+
+.story-status:before {
+  content: "\e002";
+}
+
+.story.hidden:before {
+  content: "\e00d";
 }
 
 button {
@@ -847,8 +851,21 @@ label {
   color: #007474;
 }
 
+.story.hidden:before, .story.private:before {
+  font-size: 14px;
+  font-size: 0.77778rem;
+  line-height: 23px;
+  line-height: 1.27778rem;
+  -webkit-border-radius: 0.25em;
+  -moz-border-radius: 0.25em;
+  border-radius: 0.25em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 .5em;
+}
+
 .story {
-  overflow: hidden;
   margin-top: 23px;
   margin-top: 1.27778rem;
   margin-bottom: 23px;
@@ -858,22 +875,27 @@ label {
   margin-right: -100%;
   position: relative;
 }
+.story:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .story:nth-child(2n + 1) {
   clear: left;
 }
 .story:nth-child(2n + 2) {
   margin-left: 51.02041%;
 }
+.story.hidden:before {
+  background: #f2ac00;
+  color: #191919;
+}
 .story.private:before {
-  -webkit-border-radius: 0.25em;
-  -moz-border-radius: 0.25em;
-  border-radius: 0.25em;
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 0 .125em 0 .5em;
   background: #e30028;
   color: white;
+}
+.story.hidden.private:before {
+  content: "\e001";
 }
 
 .story-body {
@@ -901,6 +923,12 @@ label {
   border-top-color: #007474;
   border-width: 0.63889rem;
   left: 0.31944rem;
+}
+.hidden .story-body {
+  border-color: #f2ac00;
+}
+.hidden .story-body:before {
+  border-top-color: #f2ac00;
 }
 .private .story-body {
   border-color: #e30028;
@@ -938,14 +966,31 @@ label {
   text-align: right;
 }
 
+.story-status, .delete-story {
+  padding: 0 0.31944rem;
+  color: #999999;
+}
+
 .story-private-notice {
   font-size: 14px;
   font-size: 0.77778rem;
   line-height: 23px;
   line-height: 1.27778rem;
   display: inline-block;
-  padding: 0 0.63889rem;
   color: #b2b2b2;
+}
+.story-private-notice:before {
+  padding-right: .4em;
+}
+
+.story-status:focus, .story-status:hover, .story-status:active {
+  color: #007474;
+}
+.story-status.hide:before {
+  content: "\e00d";
+}
+.story-status.hide:focus, .story-status.hide:hover, .story-status.hide:active {
+  color: #f2ac00;
 }
 
 .delete-story:focus, .delete-story:hover, .delete-story:active {
