--- a/templates/_story.html
+++ b/templates/_story.html
@@ -1,5 +1,5 @@
 {% load markup %}
-<article class="story {{ story.published|yesno:'public,private' }}">
+<article class="story {{ story.published|yesno:'published,hidden' }} {{ story.private|yesno:'private,public' }}">
   <div class="story-body">
     {{ story.body|markdown }}
   </div>
@@ -14,11 +14,11 @@
       <form method="POST">
         {% csrf_token %}
         {% if story.published %}
-          <button type="submit" name="hide-story" value="{{ story.id }}" class="story-status lock" title="Make this story private">lock</button>
+          <button type="submit" name="hide-story" value="{{ story.id }}" class="story-status hide" title="Hide this story">hide</button>
         {% elif story.private %}
-          <p class="story-private-notice" title="This story was marked private by the student.">private</p>
+          <p class="story-private-notice" title="This is a private note, just for you.">private</p>
         {% else %}
-          <button type="submit" name="publish-story" value="{{ story.id }}" class="story-status unlock" title="Make this story public">unlock</button>
+          <button type="submit" name="publish-story" value="{{ story.id }}" class="story-status publish" title="Publish this story">publish</button>
         {% endif %}
         <button type="submit" name="delete-story" value="{{ story.id }}" class="delete-story" title="Delete this story.">Delete</button>
       </form>
