--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -174,7 +174,7 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370583578') format("woff"), url('../fonts/knet.ttf?1370583578') format("truetype");
+  src: url('../fonts/knet.woff?1370556580') format("woff"), url('../fonts/knet.ttf?1370556580') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -891,8 +891,8 @@ label {
   color: #191919;
 }
 .story.private:before {
-  background: #e30028;
-  color: white;
+  background: #b2b2b2;
+  color: #191919;
 }
 .story.hidden.private:before {
   content: "\e001";
@@ -931,10 +931,10 @@ label {
   border-top-color: #f2ac00;
 }
 .private .story-body {
-  border-color: #e30028;
+  border-color: #b2b2b2;
 }
 .private .story-body:before {
-  border-top-color: #e30028;
+  border-top-color: #b2b2b2;
 }
 
 .story-info {
